update text color

--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@ layout: homepage
 		<div class="landing-vid landing-darken"></div>
 	</div>
 	<div class="content">
-		<h1 class="landing-headline">MEN'S TRACK AND FIELD / CROSS COUNTRY</h1>
-		<p class="major landing-text"> <b>UPDATE: On June 9th, Brown University announced that Men's Track & Field/Cross Country would be fully reinstated as a Varsity team.
-				<a href=https://www.brown.edu/news/2020-06-09/track target="_blank">Read the announcement here.</a>
-				<br></br>
-				<a href=https://blacklivesmatter.com target="_blank">#BlackLivesMatter</a>.</b></p>
+		<h1 class="landing-headline">Save Golden Gopher Men's Track and Field</h1>
+		<p class="major landing-text"> <b>Description coming soon</b></p>
 		<ul class="actions stacked">
 			<li><a href="#statement" class="button big wide smooth-scroll-top-navbar-offset"><b>Get Started</b></a></li>
 		</ul>
