update form and footer

--- a/index.html
+++ b/index.html
@@ -203,50 +203,6 @@ layout: homepage
 		</div>
 	</section>
 
-	<!-- James Nealon -->
-	<!-- <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="1">
-		<div class="content">
-			<h2>A Letter From James D. Nealon '77</h2>
-			<h3>"I am writing to express my anger at your decision to eliminate the most diverse sports team at
-				Brown, and my extreme frustration at the sloppy manner in which you announced it."
-			</h3>
-			<p>
-				Jim Nealon served for 33 years as a Foreign Service Officer, including as Ambassador to
-				Honduras, Deputy Chief of Mission in Canada, Peru and Uruguay, and as Civilian Deputy to the
-				Commander at U.S. Southern Command. Recently he served as Assistant Secretary for
-				International Affairs at the Department of Homeland Security, and Senior Official Performing
-				the Duties of the Under Secretary for Policy.
-			</p>
-			<ul class="actions stacked">
-				<li><a href="./screens/testimonials/jamesnealon.html" class="button">Read More</a></li>
-			</ul>
-		</div>
-		<div class="image">
-			<img src="images/testimonials/JNealson.png" alt="" />
-		</div>
-	</section> -->
-
-	<!-- Alumni Women's Op Ed -->
-	<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="2">
-		<div class="content">
-			<h2>A Collective Op Ed from Women's XC/TF Alumni</h2>
-			<h3>"As alumnae of the Brown Women’s Cross Country and Track &amp; Field team, we
-				are writing in solidarity with current teammates on the Brown Men’s Cross Country and
-				Track &amp; Field team whose collegiate athletic careers were abruptly terminated in a
-				school-wide email this week."
-			</h3>
-			<p>
-				Brown Women’s Track &amp; Field/XC Alumnae, 1987-2019
-			</p>
-			<ul class="actions stacked">
-				<li><a href="./screens/oped/womensalumni.html" class="button">Read More</a></li>
-			</ul>
-		</div>
-		<div class="image">
-			<img src="images/oped/WTeam1.jpg" alt="" />
-		</div>
-	</section> -->
-
 	<!-- Excellence + Analytics -->
 	<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="excellence">
 		<div class="content">
@@ -282,15 +238,9 @@ layout: homepage
 			<h3>If you would like to offer skills, connections, ideas, or words of support</h3>
 			<h2>Please get in touch</h2>
 			<h3>Your emails will be treated carefully, and with great respect.</h3>
-			<p>Alternatively, email us at <a href="mailto: savebrownxctf@gmail.com" target="_blank">savebrownxctf@gmail.com</a>.</p>
-			<form method="post" action="https://liveformhq.com/form/17335dab-3966-4846-9caa-fa693b6a5564" accept-charset="utf-8">
+			<p>Alternatively, email us at <a href="mailto: savegophertf@gmail.com" target="_blank">savegopherctf@gmail.com</a>.</p>
+			<form action="https://liveformhq.com/form/9ef3e70b-28c1-44de-9c0c-bb7487bad22d" method="POST" accept-charset="utf-8">
 				<input type="hidden" name="_utf8" value="✓">
-				<!--
-						NOTE: This is an optional field, if your form has a field named '_redirect',
-						The user will be redirected to this page after the submission is saved
-						TODO: make custom page for redirect
-					-->
-				<input type="hidden" value="https://liveformhq.com/thank_you" name="_redirect" />
 
 				<div class="fields">
 					<div class="field half">
