start adding alumni testimonials

--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -28,14 +28,28 @@ layout: base
 	<!-- Gallery -->
 	<div class="gallery style1 small lightbox onscroll-fade-in">
 		<article>
-			<a href="/screens/testimonials/austinreynolds.html" class="image">
-				<img src="/images/testimonials/areynolds.jpg" alt="" />
+			<a href="/screens/testimonials/derekstorkel.html" class="image">
+				<img src="/images/testimonials/dstorkel.png" alt="" />
 			</a>
 			<div class="caption">
-				<h3>Austin Reynolds</h3>
-				<p>Fraudulent and illegitimate.</p>
+				<h3>Derek Storkel</h3>
+				<p>Minnesota made me the man I am today</p>
 				<ul class="actions fixed">
-					<li><a href="/screens/testimonials/austinreynolds.html" class="button small">Read More</a></li>
+					<li><a class="button small" href="/screens/testimonials/derekstorkel.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+	</div>
+	<div class="gallery style1 small lightbox onscroll-fade-in">
+		<article>
+			<a href="/screens/testimonials/danhumes.html" class="image">
+				<img src="/images/testimonials/dhumes.jpeg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Dan Humes</h3>
+				<p>Family</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/danhumes.html">Read More</a></li>
 				</ul>
 			</div>
 		</article>
