--- a/screens/athletes.html
+++ b/screens/athletes.html
@@ -29,14 +29,14 @@ layout: base
 	<!-- Gallery -->
 	<div class="gallery style1 small lightbox onscroll-fade-in">
 		<article>
-			<a href="/screens/testimonials/calvinperkins.html" class="image">
-				<img src="/images/testimonials/cperkins.jpg" alt="" />
+			<a href="/screens/testimonials/derekstorkel.html" class="image">
+				<img src="/images/testimonials/dstorkel.png" alt="" />
 			</a>
 			<div class="caption">
-				<h3>Calvin Perkins</h3>
-				<p>Keep this family alive.</p>
+				<h3>Derek Storkel</h3>
+				<p>Minnesota made me the man I am today</p>
 				<ul class="actions fixed">
-					<li><a class="button small" href="/screens/testimonials/calvinperkins.html">Read More</a></li>
+					<li><a class="button small" href="/screens/testimonials/derekstorkel.html">Read More</a></li>
 				</ul>
 			</div>
 		</article>
