--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -7,7 +7,7 @@ layout: base
 	<div class="content">
 		<h1>Alumni Support</h1>
 		<!-- <p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p> -->
-		<p class="major"> Hear from our vast network of alumni who have been impacted by Brown Track and Field. Check back for new stories every day.
+		<p class="major"> Hear from our vast network of alumni who have been impacted by Minnesota Track and Field. Check back for new stories every day.
 			<br></br>
 			If you are moved by these testimonials and would like to submit your own or support our effort in other ways,
 			<a href="/screens/join_us.html">join us</a>.
@@ -84,6 +84,78 @@ layout: base
 				<p>Power Five Conference Leader, or Power 5 Conference Disgrace?</p>
 				<ul class="actions fixed">
 					<li><a class="button small" href="/screens/testimonials/andyrichardson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/adamzutz.html" class="image">
+				<img src="/images/testimonials/azutz.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Adam Zutz</h3>
+				<p>Bettering the state of Minnesota</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/adamzutz.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/megansmith.html" class="image">
+				<img src="/images/testimonials/msmith.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Megan Smith</h3>
+				<p>The 'M' Never Comes Off</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/megansmith.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/christinpeterson.html" class="image">
+				<img src="/images/testimonials/cpeterson.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Christin (Kingsley) Peterson</h3>
+				<p>Money isn’t everything!</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/christinpeterson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/lisafosdick.html" class="image">
+				<img src="/images/testimonials/lfosdick.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Lisa (Pruitt) Fosdick</h3>
+				<p>Convinced me to apply</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/lisafosdick.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/charlielawrence.html" class="image">
+				<img src="/images/testimonials/clawrence.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Charlie Lawrence</h3>
+				<p>Time to Double Down on Minnesota Track & Field</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/charlielawrence.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/jimrichard.html" class="image">
+				<img src="/images/testimonials/jrichard.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Jim Richard</h3>
+				<p>Protect Student Athlete Opportunities</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/jimrichard.html">Read More</a></li>
 				</ul>
 			</div>
 		</article>
