--- a/screens/testimonials/adamisakson.html
+++ b/screens/testimonials/adamisakson.html
@@ -1,5 +1,5 @@
 ---
-title: "#SaveGopherTF Dan Humes"
+title: "#SaveGopherTF Adam Isakson"
 layout: alumni_testimonial
 fullname: "Adam Isakson '13 Jumps"
 quote: "This is a picture of Minnesota Men's Track & Field "
@@ -19,6 +19,6 @@ image: "/images/testimonials/aisakson.jpg"
             <br><br>
             Without Minnesota Men’s Track this picture is very different, and frankly it’s not a picture I care to imagine. This picture is exactly where I am supposed to be, with exactly who I am supposed to be with, and this is a picture of
             Minnesota Men’s Track and Field.
-
+        </p>
     </div>
 </section>
