--- a/screens/testimonials/andyrichardson.html
+++ b/screens/testimonials/andyrichardson.html
@@ -1,5 +1,5 @@
 ---
-title: "#SaveGopherTF Dan Humes"
+title: "#SaveGopherTF Andy Richardson"
 layout: alumni_testimonial
 fullname: "Andy Richardson '12 Mid-D"
 quote: "Power Five Conference Leader, or Power 5 Conference Disgrace?"
@@ -19,5 +19,6 @@ image: "/images/testimonials/arichardson.jpg"
             <br><br>
             Being a Gopher is a part of my identity and something I hold onto very closely. The news of losing this connection to the university is heartbreaking to me. I love everything about being a Gopher and forever feel so proud to be a part of
             such an incredible institution. Please do not take this away from the current and future young men that might get the chance to be a part of Gopher track and field.
+        </p>
     </div>
 </section>
