even more testimonials

--- a/screens/testimonials/derekrubis.html
+++ b/screens/testimonials/derekrubis.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Derek Rubis"
 layout: supporter_testimonial
-fullname: "Derek Rubis, Dill Carroll University '08"
+fullname: "Derek Rubis"
 quote: "Life & Family"
 image: "/images/testimonials/drubis.jpg"
 ---
