--- a/screens/athletes.html
+++ b/screens/athletes.html
@@ -148,6 +148,67 @@ layout: base
 				</ul>
 			</div>
 		</article>
+		<article>
+			<a href="/screens/testimonials/dawsonlarance.html" class="image">
+				<img src="/images/testimonials/dlarance.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Dawson LaRance</h3>
+				<p>Finding LGBTQ+ Inclusivity in the Men's T&F Program</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/dawsonlarance.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/declandahlberg.html" class="image">
+				<img src="/images/testimonials/ddahlberg.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Declan Dahlberg</h3>
+				<p>Core mission should be opportunity for students, everything else is secondary</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/declandahlberg.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/dillonblake.html" class="image">
+				<img src="/images/testimonials/dblake.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Dillon Blake</h3>
+				<p>The Track: An Oval Classroom</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/dillonblake.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/courtneywest.html" class="image">
+				<img src="/images/testimonials/cwest.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Courtney West</h3>
+				<p>Impacts Far Beyond Sport</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/courtneywest.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/abbykohutjackson.html" class="image">
+				<img src="/images/testimonials/akohutjackson.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Abby Kohut-Jackson</h3>
+				<p>Track and Field is a Driver for Diversity and Inclusion</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/akohutjackson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+
 	</div>
 
 </section>
