--- a/screens/supporters.html
+++ b/screens/supporters.html
@@ -52,6 +52,18 @@ layout: base
 				</ul>
 			</div>
 		</article>
+		<article>
+			<a href="/screens/testimonials/terryarason.html" class="image">
+				<img src="/images/testimonials/tarason.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Terry Arason</h3>
+				<p>Life Lessons</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/terryarason.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
 	</div>
 </section>
 <section class="wrapper style1 align-center" id="home">
