--- a/screens/testimonials/adamisakson.html
+++ b/screens/testimonials/adamisakson.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Adam Isakson"
 layout: alumni_testimonial
-fullname: "Adam Isakson '13 Jumps"
+fullname: "Adam Isakson, '13 Jumps"
 quote: "This is a picture of Minnesota Men's Track & Field "
 image: "/images/testimonials/aisakson.jpg"
 ---
