--- a/screens/testimonials/adamzutz.html
+++ b/screens/testimonials/adamzutz.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Adam Zutz"
 layout: alumni_testimonial
-fullname: "Adam Zutz, '16 Distance/XC'"
+fullname: "Adam Zutz, '16 Distance/XC"
 quote: "Bettering the state of Minnesota"
 image: "/images/testimonials/azutz.jpg"
 ---
