--- a/screens/testimonials/andyrichardson.html
+++ b/screens/testimonials/andyrichardson.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Andy Richardson"
 layout: alumni_testimonial
-fullname: "Andy Richardson '12 Mid-D"
+fullname: "Andy Richardson, '12 Mid-D"
 quote: "Power Five Conference Leader, or Power 5 Conference Disgrace?"
 image: "/images/testimonials/arichardson.jpg"
 ---
