--- a/screens/testimonials/danhumes.html
+++ b/screens/testimonials/danhumes.html
@@ -1,9 +1,9 @@
 ---
 title: "#SaveGopherTF Dan Humes"
 layout: alumni_testimonial
-fullname: "Dan Humes '74 Mid-D"
-quote: "Family."
-image: "/images/testimonials/dhumes.jpg"
+fullname: "Dan Humes, '74 Mid-D"
+quote: "Family"
+image: "/images/testimonials/dhumes.png"
 ---
 
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
