--- a/screens/testimonials/derekstorkel.html
+++ b/screens/testimonials/derekstorkel.html
@@ -1,8 +1,8 @@
 ---
 title: "#SaveGopherTF Derek Storkel"
 layout: alumni_testimonial
-fullname: "Derek Storkel '14 Distance/XC"
-quote: "Minnesota made me the man I am today."
+fullname: "Derek Storkel, '14 Distance/XC"
+quote: "Minnesota made me the man I am today"
 image: "/images/testimonials/dstorkel.png"
 ---
 
