--- a/screens/testimonials/jamestravis.html
+++ b/screens/testimonials/jamestravis.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF James Travis"
 layout: alumni_testimonial
-fullname: "James Travis '18 Jumps"
+fullname: "James Travis, '18 Jumps"
 quote: "Relationships"
 image: "/images/testimonials/jtravis.jpg"
 ---
