--- a/screens/testimonials/mattbarrett.html
+++ b/screens/testimonials/mattbarrett.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Dan Humes"
 layout: alumni_testimonial
-fullname: "Matt Barrett '10 Distance/XC"
+fullname: "Matt Barrett, '10 Distance/XC"
 quote: "The Athletes Deserve Better"
 image: "/images/testimonials/mbarrett.jpg"
 ---
