--- a/screens/testimonials/mattferry.html
+++ b/screens/testimonials/mattferry.html
@@ -20,32 +20,34 @@ image: "/images/testimonials/mferry.jpg"
             I am adapting a poem from Kevin Langton, a high school teammate, to capture what the Track and Field Program at the University of Minnesota did for me and many other young men.
             <br><br>
             <i>
-                We ran intervals on Bierman Track.<br>
-                The tartan surface there slows time. It gives time memory.<br>
-                I am 53 years old today, and I clearly hear <br>
-                the clicking of track spikes, <br>
-                gasping for oxygen with teammates, <br>
-                trying to get to the finish line at the end of our last interval.<br>
-                I still hear Griak’s voice echoing, “Gaul dang it guys, give me one more lap.” <br>
-                Somehow, in the sticky hot air, we found another lap, one we didn’t know we had.<br>
-                We found that lap because we had to,<br>
-                because we were a Gopher.
-                <br><br>
-                It changed something inside us. It changed us, that last lap.
-                <br><br>
-                We carry that last lap with us, and we find it when we need it most <br>
-                and places we never expected.<br>
-                We find it when we realize we have lied to ourselves too long.<br>
-                We find it on snow covered trails on mountain hikes.<br>
-                We find it during a 14 year journey of infertility, the loss of a job, and divorce court.<br>
-                We find it when we bury friends, students, family and coaches.<br>
-                We find it when we finally hear our daughter’s first cry, that first breath of life.<br>
-                We find it on moonlit, midnight runs covered in soft rain<br>
-                and doctor’s offices, car accidents, and prison visiting rooms.<br>
-                We find it when something we care about so much, so much it becomes a part of us, may be taken away.<br>
-                We find that last lap when we most need it,<br>
-                and we learn to carefully unwrap the gift of the U of MN Track and Field program,<br>
-                and discover the gift of being a Gopher.
+                <center>
+                    We ran intervals on Bierman Track.<br>
+                    The tartan surface there slows time. It gives time memory.<br>
+                    I am 53 years old today, and I clearly hear <br>
+                    the clicking of track spikes <br>
+                    the gasping for oxygen with teammates <br>
+                    trying to get to the finish line at the end of our last interval.
+                    <br><br>
+                    I still hear Griak’s voice echoing, “Gaul dang it guys, give me one more lap.” <br>
+                    Somehow, in the sticky hot air, we found another lap, one we didn’t know we had.<br>
+                    We found that lap because we had to, because we were Gophers.
+                    <br><br>
+                    It changed something inside us. It changed us, that last lap.
+                    <br><br>
+                    We carry that last lap with us, and we find it when we need it most <br>
+                    and in places we never expected.<br>
+                    We find it when we realize we have lied to ourselves too long.<br>
+                    We find it on snow covered trails on mountain hikes.<br>
+                    We find it during a 14 year journey of infertility, the loss of a job, and divorce court.<br>
+                    We find it when we bury friends, students, family and coaches.<br>
+                    We find it when we finally hear our daughter’s first cry, that first breath of life.<br>
+                    We find it on moonlit, midnight runs covered in soft rain<br>
+                    and doctor’s offices, car accidents, and prison visiting rooms.<br>
+                    We find it when something we care about so much, so much it becomes a part of us, may be taken away.<br>
+                    We find that last lap when we most need it<br>
+                    and we learn to carefully unwrap the gift of the U of MN Track and Field program<br>
+                    and discover the gift of being a Gopher.
+                </center>
             </i>
             <br><br>
             Matt Ferry <br>
