--- a/screens/testimonials/michaelweissenborn.html
+++ b/screens/testimonials/michaelweissenborn.html
@@ -1,6 +1,6 @@
 ---
 title: "#SaveGopherTF Michael Weissenborn"
-layout: supporter_testimonial
+layout: alumni_testimonial
 fullname: "Michael Weissenborn, '09 Student Manager"
 quote: "Embrace Dreams, Preserve Opportunities"
 image: "/images/testimonials/mweissenborn.jpg"
