--- a/screens/testimonials/hassanmead.html
+++ b/screens/testimonials/hassanmead.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Hassan Mead"
 layout: alumni_testimonial
-fullname: "Hassan Mead '12 Distance/XC'"
+fullname: "Hassan Mead, '12 Distance/XC"
 quote: "This is more than just sports. "
 image: "/images/testimonials/hmead.jpg"
 ---
