--- a/screens/testimonials/ryanmalmin.html
+++ b/screens/testimonials/ryanmalmin.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Ryan Malmin"
 layout: alumni_testimonial
-fullname: "Ryan Malmin '06 Distance/XC"
+fullname: "Ryan Malmin, '06 Distance/XC"
 quote: "Let them toe the line!"
 image: "/images/testimonials/rmalmin.jpg"
 ---
