update take action

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: homepage
 				<li>Work hand and hand with our supporters to pursue an alternative and more innovative athletic funding model to create sustainability</li>
 			</ol>
 			<ul class="actions stacked">
-				<li><a href="screens/join_us.html" class="button">Take Action</a></li>
+				<li><a href="screens/take_action.html" class="button">Take Action</a></li>
 			</ul>
 		</div>
 	</section>
