--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@ layout: homepage
 <!-- Header -->
 <section class="banner style5 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right landing-margin" id="home">
 	<div class="image landing-vid">
-		<video playsinline loop muted autoplay poster="/images/disappear_small_first_image.jpg">
-			<source src="/images/disappear_slow.mp4" type="video/mp4">
-		</video>
-		<div class="landing-vid landing-darken"></div>
+		<img src="/images/landingpage.jpg" alt="" />
 	</div>
 	<div class="content">
 		<h1 class="landing-headline">Save Golden Gopher Men's Track and Field</h1>
 		<p class="major landing-text"> <b>Description coming soon</b></p>
 		<ul class="actions stacked">
-			<li><a href="#statement" class="button big wide smooth-scroll-top-navbar-offset"><b>Get Started</b></a></li>
-			<li><a href="#joinus" class="button big wide smooth-scroll-top-navbar-offset"><b>Action</b></a></li>
+			<li><a href="#statement" class="button wide smooth-scroll-top-navbar-offset"><b>Get Started</b></a></li>
+			<li><a href="#joinus" class="button wide smooth-scroll-top-navbar-offset"><b>Action</b></a></li>
 		</ul>
 	</div>
 </section>
