add regents button

--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -7,6 +7,7 @@ layout: base
     <div class="content">
         <h1>Take Action</h1>
         <ul class="actions stacked">
+            <li><a href="#regents" class="button big wide smooth-scroll-middle">See Regents List</a></li>
             <li><a href="/index.html#joinus" class="button big wide smooth-scroll-middle">Back Home</a></li>
         </ul>
     </div>
@@ -34,14 +35,14 @@ layout: base
             Like, share and comment on our content to increase visibility.
             Post on Instagram, Facebook, and Twitter with the hashtag #savegophertf to voice your opinion about this decision.
         </p>
-
         <h3>Contact the regents</h3>
         <p>
-            Below is a list of the email addresses of influential individuals who have the power to help reverse this decision. You can make a difference by voicing your opinion to any and all of these individuals. <b>When sending emails, please CC
-                savegophertf@gmail.com</b> so we can keep a record of sent emails and responses. Feel free to forward any responses already received to this email address.
+            Below is a list of the email addresses of influential individuals who have the power to help reverse this decision. You can make a difference by voicing your opinion to any and all of these individuals. <b>When sending emails, please
+                CC
+                <a href="mailto:savegophertf@gmail.com">savegophertf@gmail.com</a></b> so we can keep a record of sent emails and responses. Feel free to forward any responses already received to this email address.
         </p>
 
-        <table>
+        <table id="regents">
             <thead>
                 <tr>
                     <th>Name</th>
