--- a/index.html
+++ b/index.html
@@ -80,28 +80,15 @@ layout: homepage
 				</div>
 			</article>
 			<article>
-				<a href="/screens/testimonials/obsaali.html" class="image">
-					<img src="/images/testimonials/oali.jpg" alt="" />
+				<a href="/screens/testimonials/hassanmead.html" class="image">
+					<img src="/images/testimonials/hmead.jpg" alt="" />
 				</a>
 				<div class="caption">
-					<h1>Obsa Ali</h1>
+					<h1>Hassan Mead</h1>
 					<h3>NCAA 3000m Champion</h3>
-					<p>Representation At Every Level Matters</p>
+					<p>This is more than just sports.</p>
 					<ul class="actions fixed">
-						<li><a href="/screens/testimonials/obsaali.html" class="button small">Read More</a></li>
-					</ul>
-				</div>
-			</article>
-			<article>
-				<a href="/screens/testimonials/obsaali.html" class="image">
-					<img src="/images/testimonials/oali.jpg" alt="" />
-				</a>
-				<div class="caption">
-					<h1>Obsa Ali</h1>
-					<h3>NCAA 3000m Champion</h3>
-					<p>Representation At Every Level Matters</p>
-					<ul class="actions fixed">
-						<li><a href="/screens/testimonials/obsaali.html" class="button small">Read More</a></li>
+						<li><a href="/screens/testimonials/hassanmead.html" class="button small">Read More</a></li>
 					</ul>
 				</div>
 			</article>
