take action update

--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -32,14 +32,23 @@ layout: base
             like us on <a href=https://www.facebook.com/groups/634286233941618/ target="_blank">Facebook</a>,
             follow us on <a href=https://twitter.com/umnmen target="_blank">Twitter</a>,
             and subscribe to our <a href="https://www.youtube.com/playlist?list=PL2378DE30A35C53F0" target="_blank">YouTube channel</a>.
-            Like, share and comment on our content to increase visibility.
-            Post on Instagram, Facebook, and Twitter with the hashtag #savegophertf to voice your opinion about this decision.
+            Like, share and comment on our content to increase visibility. Post on Instagram, Facebook, and Twitter with the hashtag #savegophertf to voice your opinion about this decision.
+
         </p>
         <h3>Contact the regents</h3>
         <p>
-            Below is a list of the email addresses of influential individuals who have the power to help reverse this decision. You can make a difference by voicing your opinion to any and all of these individuals. <b>When sending emails, please
+            The Board of Regents are the main group we are attempting to educate. The Board of Regents will decide whether to approve the proposal to cut Men’s Track and Field on October 9, 2020 at their Full Board Meeting, beginning around 9 am CST.
+            We need 6 or more of the 12 Regents to vote against the proposal.
+
+            The 12 members of the Board of Regents articulate a vision for the University and works to ensure the University of Minnesota fulfills its mission of education, research, and outreach. They are a volunteer civilian board and serve
+            six-year terms.
+            <br><br>
+            <b>When sending emails, please
                 CC
                 <a href="mailto:savegophertf@gmail.com">savegophertf@gmail.com</a></b> so we can keep a record of sent emails and responses. Feel free to forward any responses already received to this email address.
+            <br><br>
+            Some Regents have direct phone numbers listed, while others use the general phone number: 612.624.6608. You can leave an individual message at the general number.<b>IMPORTANT: You must say that you are calling for “Regent [Name]” – then
+                your actual audio message will be forwarded directly to that individual regent.</b> Otherwise it will be noted and shared as part of a staff summary.
         </p>
 
         <table id="regents">
@@ -48,20 +57,136 @@ layout: base
                     <th>Name</th>
                     <th>Title</th>
                     <th>Email</th>
+                    <th>Phone</th>
+                    <th>Bio</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Jack Hayes</td>
-                    <td>Athletic Director</td>
-                    <td>jack_hayes@brown.edu</td>
+                    <td>Kendall J. Powell</a></td>
+                    <td>Chair of the Board of Regents</td>
+                    <td>kpowell@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/kendall-j-powell target='_'>Link</a></td>
                 </tr>
                 <tr class="table-row-maroon">
-                    <td>Christina Paxson</td>
-                    <td>President of the University</td>
-                    <td>president@brown.edu</td>
+                    <td>Steven A. Sviggum</td>
+                    <td>Vice Chair of the Board of Regents</td>
+                    <td>sviggum@umn.edu</td>
+                    <td>651-332-3583</td>
+                    <td><a href=https://regents.umn.edu/steven-sviggum target='_'>Link</a></td>
+                </tr>
+                <tr>
+                    <td>Thomas J. Anderson</td>
+                    <td>Board of Regent Member</td>
+                    <td>tja@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/thomas-j-anderson target='_'>Link</a></td>
+                </tr>
+                <tr class="table-row-maroon">
+                    <td>Richard B. Beeson</td>
+                    <td>Board of Regent Member</td>
+                    <td>rbeeson@umn.edu</td>
+                    <td>651-523-7830</td>
+                    <td><a href=https://regents.umn.edu/richard-b-beeson target='_'>Link</a></td>
+                </tr>
+                <tr>
+                    <td>Mary A. Davenport</td>
+                    <td>Board of Regent Member</td>
+                    <td>mdavenpo@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/mary-davenport target='_'>Link</a></td>
+                </tr>
+                <tr class="table-row-maroon">
+                    <td>Kao Ly Ilean Her</td>
+                    <td>Board of Regent Member</td>
+                    <td>kliher@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/kao-ly-ilean-her target='_'>Link</a></td>
+                </tr>
+                <tr>
+                    <td>Michael D. Hsu</td>
+                    <td>Board of Regent Member</td>
+                    <td>hsu@umn.edu</td>
+                    <td>612-701-6576</td>
+                    <td><a href=https://regents.umn.edu/michael-d-hsu target='_'>Link</a></td>
+                </tr>
+                <tr class="table-row-maroon">
+                    <td>Mike O. Kenyanya</td>
+                    <td>Board of Regent Member</td>
+                    <td>kenyanya@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/mike-o-kenyanya target='_'>Link</a></td>
+                </tr>
+                <tr>
+                    <td>Janie S. Mayeron</td>
+                    <td>Board of Regent Member</td>
+                    <td>mayeron@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/janie-s-mayeron target='_'>Link</a></td>
+                </tr>
+                <tr class="table-row-maroon">
+                    <td>David J. McMillan</td>
+                    <td>Board of Regent Member</td>
+                    <td>kliher@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/david-j-mcmillan target='_'>Link</a></td>
+                </tr>
+                <tr>
+                    <td>Darrin M. Rosha</td>
+                    <td>Board of Regent Member</td>
+                    <td>hsu@umn.edu</td>
+                    <td>612-624-6608</td>
+                    <td><a href=https://regents.umn.edu/darrin-m-rosha target='_'>Link</a></td>
+                </tr>
+                <tr class="table-row-maroon">
+                    <td>Randy R. Simonson</td>
+                    <td>Board of Regent Member</td>
+                    <td>kenyanya@umn.edu</td>
+                    <td>605-553-2232</td>
+                    <td><a href=https://regents.umn.edu/randy-r-simonson target='_'>Link</a></td>
                 </tr>
             </tbody>
         </table>
+
+        <h3>Contact the President</h3>
+        <p>
+            The Board of Regents establishes a framework for the President to achieve that vision. President Gabel reports directly to them. She oversees all aspects of the University operations, including the Athletic Department.
+            Below is a contact list for the President of the University and her key staff.
+        </p>
+        <table id="regents">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Title</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Joan Gabel</a></td>
+                    <td>President of the University</td>
+                    <td>upres@umn.edu</td>
+                    <td>612-626-1616</td>
+                </tr>
+                <!-- <tr class="table-row-maroon">
+                    <td>Steven A. Sviggum</td>
+                    <td>Vice Chair of the Board of Regents</td>
+                    <td>sviggum@umn.edu</td>
+                    <td>651-332-3583</td>
+                    <td><a href=https://regents.umn.edu/steven-sviggum target='_'>Link</a></td>
+                </tr> -->
+            </tbody>
+        </table>
+
+        <h3>State of Minnesota Legislators</h3>
+        <p>
+            The State of Minnesota provides state funding to the University of Minnesota. The next session is a biennial budget session at the Minnesota Legislature. To contact your state representative or senator, follow the links below.
+            <br><br>
+            <a href='https://www.house.leg.state.mn.us/members/list' target="_">Minnesota House of Representatives</a>
+            <a href='https://www.senate.mn/members/' target="_">Minnesota Senate</a>
+        </p>
+
     </div>
 </section>
