break landing text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@ layout: homepage
 		<img src="/images/landingpage.jpg" alt="" />
 	</div>
 	<div class="content">
-		<h1 class="landing-headline">Save Gopher Track and Field</h1>
+		<h1 class="landing-headline">
+			Save
+			<br>
+			Gopher
+			<br>
+			Track and Field
+		</h1>
 		<ul class="actions">
 			<li><a href="#theissue" class="button wide smooth-scroll-top-navbar-offset"><b>Learn More</b></a></li>
 			<li><a href="screens/take_action.html" class="button wide smooth-scroll-top-navbar-offset"><b>Take Action</b></a></li>
