--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: homepage
 			</ul>
 		</div>
 		<div class="image">
-			<img src="images/full-team.jpg" alt="" />
+			<img src="images/big_ten_indoors.jpg" alt="" />
 		</div>
 	</section>
 
