--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -20,7 +20,7 @@ layout: base
 		</div>
 	</div>
 	<div class="image">
-		<img src="/images/full-team.jpg" alt="" />
+		<img src="/images/alumni.png" alt="" />
 	</div>
 </section>
 <section class="wrapper style1 align-center" id="all">
