change talking points

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: homepage
 				Minnesota Golden Gopher Track and Field athletes, alumni, supporters and donors call on our 12 Board of Regent Members to vote NO on October 9th to the proposal to eliminate Men’s Track and Field. We also demand that our Athletic
 				Administration and President do the following:
 			</p>
-			<ol>
+			<ol class="d">
 				<li>Commit to fair and transparent processes for future decisions about track and field,</li>
 				<li>Make a renewed and lasting commitment to be “Driven to Discover” with initiatives that promote an equitable experience to every team and student athlete, and</li>
 				<li>Work hand-in-hand with our supporters to pursue an alternative and more innovative athletic funding model to create sustainability.</li>
