add spotlight testimonial layout

--- a/screens/testimonials/hassanmead.html
+++ b/screens/testimonials/hassanmead.html
@@ -1,6 +1,7 @@
 ---
 title: "#SaveGopherTF Hassan Mead"
-layout: alumni_testimonial
+layout: spotlight_testimonial
+description: placeholder
 fullname: "Hassan Mead, '12 Distance/XC"
 quote: "This is more than just sports. "
 image: "/images/testimonials/hmead.jpg"
