--- a/screens/testimonials/obsaali.html
+++ b/screens/testimonials/obsaali.html
@@ -1,7 +1,8 @@
 ---
 title: "#SaveGopherTF Obsa Ali"
-layout: alumni_testimonial
+layout: spotlight_testimonial
 fullname: "Obsa Ali, '19 Distance/XC"
+description: "This is a description"
 quote: "Representation At Every Level Matters"
 image: "/images/testimonials/oali.jpg"
 ---
